# pico-wifi-settings

./: .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  MODULE.bazel  README.md  remote_picotool
bazel/: mbedtls_aes_sha256.BUILD
bazel/config/: BUILD.bazel
bazel/constraint/: BUILD.bazel
doc/: BAZEL.md  IMPLEMENTATION.md  INTEGRATION.md  REMOTE.md  SETTINGS_FILE.md  SETUP_APP.md
example/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  example.c  mbedtls_config.h  pico2_partition_table.json
include/: wifi_settings.h
include/wifi_settings/: wifi_settings_configuration.h  wifi_settings_connect.h  wifi_settings_flash_storage.h  wifi_settings_flash_storage_update.h  wifi_settings_remote.h  wifi_settings_remote_handlers.h  wifi_settings_remote_memory_access_handlers.h
setup/: BUILD.bazel  CMakeLists.txt  activity_connection_test.c  activity_connection_test.h  activity_dns_test.c  activity_dns_test.h  activity_edit_hotspots.c  activity_edit_hotspots.h  activity_edit_others.c  activity_edit_others.h  activity_force_disconnect_reconnect.c  activity_force_disconnect_reconnect.h  activity_ping.c  activity_ping.h  activity_root.c  activity_root.h  activity_scan_for_a_hotspot.c  activity_scan_for_a_hotspot.h  activity_set_file_location.c  activity_set_file_location.h  activity_set_shared_secret.c  activity_set_shared_secret.h  activity_telnet_test.c  activity_telnet_test.h  dns_lookup.c  dns_lookup.h  edit_key_value.c  edit_key_value.h  file_finder.c  file_finder.h  file_operations.c  file_operations.h  lwipopts.h  setup.c  user_interface.c  user_interface.h  wifi_slots.c  wifi_slots.h
src/: wifi_settings_connect.c  wifi_settings_flash_storage.c  wifi_settings_flash_storage_update.c  wifi_settings_remote.c  wifi_settings_remote_handlers.c  wifi_settings_remote_memory_access_handlers.c
test/: README.md  release_tool.py  test_server.py  wifi_settings_connect_deploy.sh
test/connect/: deploy.sh
test/integration/: CMakeLists.txt  test.c  test_bazel.py  test_example.py  test_integration.py  test_mypy.py  test_server.py
test/integration/data/: test1.uf2  test2.uf2  test3.uf2
test/integration/remote_picotool/: __init__.py  remote_picotool.py
test/remote_picotool/: remote_picotool.py
test/remote_virtual/: CMakeLists.txt  fake_handlers.c  fake_lwip.c  fake_mbedtls.c  remote_virtual.c
test/remote_virtual/include/: remote_virtual.h
test/remote_virtual/include/lwip/: tcp.h
test/remote_virtual/include/mbedtls/: aes.h  sha256.h
test/remote_virtual/include/pico/: rand.h  stdlib.h
test/size/: CMakeLists.txt  lwipopts.h  mbedtls_config.h  test.c
test/unit/: CMakeLists.txt  test_unit.py  test_wifi_settings_connect.c  test_wifi_settings_flash_storage.c  test_wifi_settings_flash_storage_update.c
test/unit/include/: unit_test.h
test/unit/include/hardware/: flash.h  sync.h
test/unit/include/pico/: async_context.h  binary_info.h  cyw43_arch.h  error.h  flash.h  multicore.h  platform.h  stdlib.h  time.h
