#
# Copyright (c) 2025 Jack Whitham
#
# SPDX-License-Identifier: BSD-3-Clause
#
# pico-wifi-settings MODULE.bazel
#
# Defines the pico-wifi-settings Bazel module, ready to be linked to
# Pico or Pico 2 applications. See /doc/BAZEL.md for instructions.
#
module(
    name = "pico-wifi-settings",
    version = "0.1.4",
)

bazel_dep(name = "pico-sdk", version = "2.1.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_cc", version = "0.0.17")

register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2040",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2350",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# As of version 2.1.1, the Pico SDK Bazel files do not include the mbedtls library as a
# dependency and therefore there is no officially established way of using it within
# Pico projects. The following is based on Picotool's usage of the library and provides only
# the AES and SHA-256 functions. Eventually the whole library should be available
# as a Bazel module.
http_archive(
    name = "mbedtls_aes_sha256",
    build_file = "//bazel:mbedtls_aes_sha256.BUILD",
    sha256 = "241c68402cef653e586be3ce28d57da24598eb0df13fcdea9d99bfce58717132",
    strip_prefix = "mbedtls-2.28.8",
    url = "https://github.com/Mbed-TLS/mbedtls/releases/download/v2.28.8/mbedtls-2.28.8.tar.bz2",
)
